[ST-1081]: Add few more Hearing journey tests (#658)
* Fix the failing create case test for the changes in Subject details screen

* add AAT e2e Test for Hearing summary

* Fix issue with running tests parallely

* fix style

* fix styling issues

* fix styling issue

* update tests with necessary wait times

* Add the dependency task for cftlibtest

* Add hearing journeys tests

* add additional hearing tests

* update tests

---------

Co-authored-by: Pavi <pva08@Pavithrans-MacBook-Pro.local>